--- a/doc/arxiv/v2/thesis.tex
+++ b/doc/arxiv/v2/thesis.tex
@@ -443,7 +443,7 @@ where $n_1$ and $n_0$ are the number of pairs with observed $W = 1$ and $W = 0$ 
     
     \textbf{2. Unbiasedness and $\sqrt{n}$-Consistency of $\widehat{\text{ATU}}_{\text{RATE}}$}
     By the same argument as for ATT and since $P(W=0) \in (0,1)$:
-    \[\EE[\widehat{\text{ATU}}_{\text{RATE}}] = \EE[R(X, Y(1)) - R(X, Y(0)) | W = 0] = \text{ATU}]\]
+    \[\EE[\widehat{\text{ATU}}_{\text{RATE}}] = \EE[R(X, Y(1)) - R(X, Y(0)) | W = 0] = \text{ATU}\]
     and
     \[\sqrt{n}(\widehat{\text{ATU}}_{\text{RATE}} - \text{ATU}) = O_p(1)\]
     
